k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2gcal
  namespace: app2gcal
  labels:
    app: app2gcal
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: app2gcal
