k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app2gcal-ingress
  namespace: app2gcal
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - cal.google.wapsol.de
      secretName: app2gcal-tls
  rules:
    - host: cal.google.wapsol.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app2gcal
                port:
                  number: 80
